--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -25,6 +25,7 @@
     "@inquirer/prompts": "^8.2.1",
     "chalk": "^5.4.1",
     "commander": "^12.1.0",
+    "gray-matter": "^4.0.3",
     "inquirer": "^13.2.5",
     "ora": "^8.1.1",
     "zod": "^3.24.1"
